// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivateRoute && MapRoutes MapRoutes snap-shot  1`] = `
<div>
  <div>
    <div>
      home
    </div>
    <div
      role="private"
    >
      <div>
        <div>
          products
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrivateRoute && MapRoutes PrivateRoute snap-shot  1`] = `
<div>
  <div
    path="/home"
  >
    <div>
      component
    </div>
  </div>
</div>
`;
